# cloudsync

./: CMakeLists.txt  cloudsync.kdev4
.kdev4/: cloudsync.kdev4
doc/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  Messages.sh  cloudsync.cpp  cloudsync.desktop  cloudsync.h  cloudsync.kcfg  cloudsyncui.rc  cloudsyncview.cpp  cloudsyncview.h  cloudsyncview_base.ui  dirsyncer.cpp  dirsyncer.h  main.cpp  settings.kcfgc  settings.ui
